--- a/lib/package.json
+++ b/lib/package.json
@@ -19,9 +19,12 @@
     "grunt-contrib-watch": "^1.0.0",
     "handlebars": "^4.0.6",
     "hbsfy": "^2.7.0",
+    "install": "^0.8.7",
     "jquery": "^3.1.1",
     "jshint": "^2.9.4",
     "jshint-stylish": "^2.2.1",
-    "matchdep": "^1.0.1"
+    "matchdep": "^1.0.1",
+    "npm": "^4.2.0",
+    "sass": "^0.5.0"
   }
 }
